Closed Bug 1323665 Opened 9 years ago Closed 9 years ago

stylo: several tests fatally assert with "stylo: unimplemented SetEnabled"

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: heycam, Assigned: heycam)

References

Details

Attachments

(2 files)

No description provided.
gfx/tests/crashtests/398042-1.xhtml gfx/tests/crashtests/398042-2.xhtml layout/base/crashtests/234851-1.html layout/base/crashtests/386266-1.html layout/base/crashtests/460389-1.html layout/base/crashtests/492112-1.xhtml layout/generic/crashtests/469859-1.xhtml
Summary: stylo: gfx/tests/crashtests/398042-1.xhtml fatally asserts with "stylo: unimplemented SetEnabled" → stylo: several tests fatally assert with "stylo: unimplemented SetEnabled"
layout/svg/crashtests/477935-1.html
netwerk/test/crashtests/785753-1.html view/crashtests/281743-1.html
layout/style/test/test_bug1089417.html
layout/style/test/test_redundant_font_download.html
reftest crashes with signature @ mozilla::StyleSheet::SetDisabled layout/reftests/table-anonymous-boxes/208305-2.html layout/reftests/table-anonymous-boxes/208305-4.html layout/reftests/bugs/360746-1.html layout/reftests/font-face/enable-sheet-1.html layout/reftests/font-face/enable-sheet-2.html layout/reftests/font-face/enable-sheet-3.html layout/reftests/font-face/enable-sheet-4.html layout/reftests/font-face/enable-sheet-5.html layout/reftests/font-face/enable-sheet-6.html layout/reftests/font-face/enable-sheet-7.html layout/reftests/first-letter/229764-2.html layout/reftests/font-face/disable-sheet-1.html layout/reftests/font-face/disable-sheet-4.html layout/reftests/font-face/disable-sheet-5.html layout/reftests/font-face/underline-offset-change-1.html layout/reftests/font-face/underline-offset-change-2.html layout/reftests/font-face/dynamic-duplicate-rule-1a.html layout/reftests/font-face/dynamic-duplicate-rule-1c.html layout/reftests/font-face/dynamic-duplicate-rule-1b.html
Comment on attachment 8824932 [details] Bug 1323665 - Part 2: Allow StyleSheet.disabled CSSOM access to disable/enable a ServoStyleSheet. https://reviewboard.mozilla.org/r/103280/#review103800
Attachment #8824932 - Flags: review?(xidorn+moz) → review+
Comment on attachment 8824931 [details] Bug 1323665 - Part 1: Adjust some ServoStyleSet assertions. https://reviewboard.mozilla.org/r/103278/#review103802
Attachment #8824931 - Flags: review?(xidorn+moz) → review+
Pushed by xquan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d832600dd897 Part 1: Adjust some ServoStyleSet assertions. r=xidorn https://hg.mozilla.org/integration/autoland/rev/3c6af7904a1d Part 2: Allow StyleSheet.disabled CSSOM access to disable/enable a ServoStyleSheet. r=xidorn
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee: nobody → cam
Blocks: 1337599
No longer blocks: stylo-style-mochitest
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: