Bug 1323665 - Part 1: Adjust some ServoStyleSet assertions. r=xidorn

We're incorrectly asserting that a sheet is applicable when we remove it from
the style set, but we'll actually cause the sheet to be not applicable just
before we remove it from the style set.  (Note how nsStyleSet doesn't assert
this in RemoveStyleSheet.)  Also, we were missing a corresponding assertion
in AddDocStylesSheet.

MozReview-Commit-ID: E5qwxwrA74F

--HG--
extra : rebase_source : 1915553a0aa6f45b347db34feace35802983b05a